files/docker_kubernetes/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: XXX
  name: XXX
  namespace: default
spec:
  replicas: 1 #CHANGE
  minReadySeconds: 45
  selector:
    matchLabels:
      app: XXX
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: XXX
    spec:
      containers:
      - image: ZZZ #CHANGE
        imagePullPolicy: IfNotPresent
        name: XXX
        CCC
        QQQ
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels: #PODS
    app: XXX
  name: XXX
  namespace: default
spec:
  ports:
  - # nodePort: 30702 #CHANGE
    port: YYY #CHANGE
    protocol: TCP
    targetPort: YYY #CHANGE
  selector:
    app: XXX
  sessionAffinity: None #CHANGE
  type: NodePort
